--- a/index.html
+++ b/index.html
@@ -94,4 +94,50 @@
       allowfullscreen
     ></iframe>
   </section>
- 
+  <section id="pricing">
+    <div class="product" id="tenor">
+      <div class="level">Tenor Trombone</div>
+      <h2>$600</h2>
+      <ol>
+        <li>Lorem ipsum.</li>
+        <li>Lorem ipsum.</li>
+        <li>Lorem ipsum dolor.</li>
+        <li>Lorem ipsum.</li>
+      </ol>
+      <button class="btn">Select</button>
+    </div>
+    <div class="product" id="bass">
+      <div class="level">Bass Trombone</div>
+      <h2>$900</h2>
+      <ol>
+        <li>Lorem ipsum.</li>
+        <li>Lorem ipsum.</li>
+        <li>Lorem ipsum dolor.</li>
+        <li>Lorem ipsum.</li>
+      </ol>
+      <button class="btn">Select</button>
+    </div>
+    <div class="product" id="valve">
+      <div class="level">Valve Trombone</div>
+      <h2>$1200</h2>
+      <ol>
+        <li>Plays similar to a Trumpet</li>
+        <li>Great for Jazz Bands</li>
+        <li>Lorem ipsum dolor.</li>
+        <li>Lorem ipsum.</li>
+      </ol>
+      <button class="btn">Select</button>
+    </div>
+  </section>
+  <footer>
+    <ul>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+    <span>Copyright 2016, Original Trombones</span>
+  </footer>
+</div>
+</div>
+</body>
+</html>
